--- a/style.css
+++ b/style.css
@@ -151,6 +151,8 @@ div#why-result {
     max-width: 800px;
     width: 100%;
     padding: 30px;
+    margin-left: auto;
+    margin-right: auto;
     display: none;
 }
 
